--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,3 +7,12 @@ stages:
     - data_given\\WineQT.csv
     outs:
     - data\\raw\\wineQT.csv  
+
+  split_data:
+    cmd: python src\\split_data.py --config=parameters.yaml
+    deps:
+    - src\\split_data.py
+    - data\\raw\\wineQT.csv
+    outs:
+    - data\\processed\\train_wineQT.csv
+    - data\\processed\\test_wineQT.csv
