--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,6 +1,6 @@
 stages:
   load_data:
-    cmd: python src\\load_data.py --config=parameters.yaml
+    cmd: python src\\load_data.py --config=params.yaml
     deps:
     - src\\get_data.py
     - src\\load_data.py
@@ -9,10 +9,27 @@ stages:
     - data\\raw\\wineQT.csv  
 
   split_data:
-    cmd: python src\\split_data.py --config=parameters.yaml
+    cmd: python src\\split_data.py --config=params.yaml
     deps:
     - src\\split_data.py
     - data\\raw\\wineQT.csv
     outs:
     - data\\processed\\train_wineQT.csv
     - data\\processed\\test_wineQT.csv
+
+  train_and_evaluate:
+    cmd: python src\\train_and_evaluate.py --config=params.yaml
+    deps:
+    - data\\processed\\train_wineQT.csv
+    - data\\processed\\test_wineQT.csv
+    - src\\train_and_evaluate.py
+    params:
+    - estimators.ElasticNet.params.alpha
+    - estimators.ElasticNet.params.l1_ratio
+    metrics:
+    - report\\scores.json:
+        cache: false
+    - report\\params.json:
+        cache: false
+    outs:
+    - saved_models\\model.joblib
