--- a/params.yaml
+++ b/params.yaml
@@ -1,7 +1,7 @@
 base:
   project: winequality-project
   random_state: 42
-  target_col: TARGET
+  target_col: quality
 
 data_source:
   s3_source: data_given/WineQT.csv
