Values of alpha and l1_ratio changed

--- a/params.yaml
+++ b/params.yaml
@@ -19,8 +19,10 @@ estimators:
     params:
       # alpha: 0.9
       # l1_ratio: 0.4
-      alpha: 0.88
-      l1_ratio: 0.42
+      # alpha: 0.88
+      # l1_ratio: 0.42
+      alpha: 0.94
+      l1_ratio: 0.46
 model_dir: saved_models
 
 reports:
