--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ aiohttp==3.8.1
 aiohttp-retry==2.4.6
 aiosignal==1.2.0
 alembic==1.7.7
+anyio==3.6.1
 appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 arrow==1.2.2
 astroid==2.11.5
 asttokens==2.0.5
@@ -14,6 +17,7 @@ atomicwrites==1.4.0
 atpublic==3.0.1
 attrs==21.4.0
 autopep8==1.6.0
+Babel==2.10.1
 backcall==0.2.0
 beautifulsoup4==4.11.1
 binaryornot==0.4.4
@@ -53,6 +57,7 @@ et-xmlfile==1.1.0
 executing==0.8.3
 fastjsonschema==2.15.3
 filelock==3.7.1
+flake8==4.0.1
 Flask==2.1.1
 flatbuffers==1.12
 flatten-dict==0.4.2
@@ -78,16 +83,21 @@ importlib-metadata==4.11.3
 iniconfig==1.1.1
 ipykernel==6.9.1
 ipython==8.1.1
+ipython-genutils==0.2.0
 isort==5.10.1
 itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.1
 jinja2-time==0.2.0
 joblib==1.1.0
+json5==0.9.8
 jsonschema==4.4.0
 jupyter-client==7.1.2
 jupyter-core==4.9.2
+jupyter-server==1.17.1
+jupyterlab==3.4.3
 jupyterlab-pygments==0.2.1
+jupyterlab-server==2.14.0
 keras==2.9.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.0
@@ -101,16 +111,19 @@ Markdown==3.3.7
 MarkupSafe==2.1.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
-mccabe==0.7.0
+mccabe==0.6.1
 mistune==0.8.4
 mlflow==1.24.0
 multidict==6.0.2
 nanotime==0.5.2
+nbclassic==0.3.7
 nbclient==0.6.0
 nbconvert==6.5.0
 nbformat==5.3.0
 nest-asyncio==1.5.4
 networkx==2.8.3
+notebook==6.4.12
+notebook-shim==0.1.0
 numpy==1.22.3
 oauthlib==3.2.0
 openpyxl==3.0.9
@@ -140,6 +153,7 @@ pycodestyle==2.8.0
 pycparser==2.21
 pydot==1.4.2
 pyee==8.2.2
+pyflakes==2.4.0
 pygit2==1.9.2
 Pygments==2.11.2
 pygtrie==2.4.2
@@ -157,6 +171,7 @@ python-fsutil==0.6.1
 python-slugify==6.1.2
 pytz==2021.3
 pywin32==303
+pywinpty==2.0.5
 PyYAML==6.0
 pyzmq==22.3.0
 querystring-parser==1.2.4
@@ -169,11 +184,13 @@ ruamel.yaml.clib==0.2.6
 scikit-learn==1.0.2
 scipy==1.8.0
 scmrepo==0.0.19
+Send2Trash==1.8.0
 setuptools-git==1.2
 shortuuid==1.0.9
 shtab==1.5.4
 six==1.16.0
 smmap==5.0.0
+sniffio==1.2.0
 soupsieve==2.3.2
 SQLAlchemy==1.4.34
 sqlparse==0.4.2
@@ -188,6 +205,7 @@ tensorflow-estimator==2.9.0
 tensorflow-gpu==2.9.1
 tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
+terminado==0.15.0
 text-unidecode==1.3
 threadpoolctl==3.1.0
 tinycss2==1.1.1
