--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,9 @@ skipsdist = True
 [testenv]
 deps = -rrequirements.txt
 commands = 
+    # flake8 library is used to check for the violations of PEP8 python convention
+    # stop the build if there are Python syntax errors or undefined names
+    flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+    ; # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     pytest -v 
