--- a/params.yaml
+++ b/params.yaml
@@ -29,4 +29,4 @@ reports:
   params: report/params.json
   scores: report/scores.json
 
-webapp_model_dir: prediction_service/model/model.joblib
+webapp_model_dir: saved_models/model.joblib
